--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
+
 <body>
-    
+    <header>
+        <div>
+            <h1>
+                <a href="#"><img src="./imgs/logo.svg" alt=""></a>
+            </h1>
+            <nav>
+                <a href="#">Services</a>
+                <a href="#">Portfolio</a>
+                <a href="#">About</a>
+                <a href="#">Team</a>
+                <a href="#">Contact</a>
+
+            </nav>
+        </div>
+    </header>
+    <main>
+        <div class="spot">
+            <span>Welcome To Our Studio!</span>
+            <p>It's Nice To Meet You</p>
+            <a href="#">Tell Me More</a>
+        </div>
+    </main>
+    <footer></footer>
+
 </body>
+
 </html>
