--- a/index.html
+++ b/index.html
@@ -30,6 +30,31 @@
             <p>It's Nice To Meet You</p>
             <a href="#">Tell Me More</a>
         </div>
+
+        <section class="service">
+            <h2>Services</h2>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <div>
+                <article>
+                    <h3>E-Commerce</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Minima maxime quam architecto quo inventore
+                        harum ex magni, dicta impedit.</p>
+                </article>
+                <article>
+                    <h3>Responsive Design</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Minima maxime quam architecto quo inventore
+                        harum ex magni, dicta impedit.</p>
+                </article>
+                <article>
+                    <h3>Web Security</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Minima maxime quam architecto quo inventore
+                        harum ex magni, dicta impedit.</p>
+                </article>
+            </div>
+        </section>
     </main>
     <footer></footer>
 
